Cleanup: fix deprecation warnings for Java 10+.
Change "new Integer/Float...(x)" to Integer.valueOf(x).
Change clazz.newInstance to clazz.getConstructor().newInstance().